[gd_scene load_steps=8 format=3 uid="uid://bntresq1f6yqu"]

[ext_resource type="Texture2D" uid="uid://cl1m14s35ar8d" path="res://assets/sprites/ui/artdecoUI_PIPO_wb.png" id="1_fii6h"]
[ext_resource type="Script" uid="uid://dpv0odn6werr4" path="res://scripts/gui/Main.gd" id="1_r37li"]
[ext_resource type="Texture2D" uid="uid://bj16mxwqca8n" path="res://assets/sprites/background/bg_2.png" id="3_0x40j"]
[ext_resource type="Texture2D" uid="uid://ceqgjghs5r3ef" path="res://assets/sprites/background/background.png" id="3_yanll"]
[ext_resource type="Texture2D" uid="uid://eicuogsa8vr5" path="res://assets/sprites/background/bg_1.png" id="5_benjv"]
[ext_resource type="Texture2D" uid="uid://mse45vo2a2a" path="res://assets/sprites/background/fg_1.png" id="6_y3x05"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r37li"]
texture = ExtResource("1_fii6h")
texture_margin_left = 31.0
texture_margin_top = 31.0
texture_margin_right = 31.0
texture_margin_bottom = 31.0
region_rect = Rect2(16, 586, 301, 172)

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r37li")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = -215.0
offset_right = 355.0
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_r37li")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_font_sizes/font_size = 54
text = "Forgotten Epochs"

[node name="Play" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Quit")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 27
text = "Play"

[node name="Load" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Options")
focus_next = NodePath("../Options")
focus_previous = NodePath("../Quit")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 27
text = "Load game"

[node name="Options" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_top = NodePath("../Play")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../Play")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 27
text = "Options"

[node name="Quit" type="Button" parent="CanvasLayer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
focus_neighbor_top = NodePath("../Options")
focus_neighbor_bottom = NodePath("../Play")
focus_next = NodePath("../Play")
focus_previous = NodePath("../Options")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 27
text = "Quit"

[node name="Bg2" type="Sprite2D" parent="CanvasLayer"]
z_index = -98
scale = Vector2(4.5, 4.5)
texture = ExtResource("3_0x40j")
centered = false

[node name="Background" type="Sprite2D" parent="CanvasLayer"]
z_index = -100
scale = Vector2(4.5, 4.511)
texture = ExtResource("3_yanll")
centered = false

[node name="Bg1" type="Sprite2D" parent="CanvasLayer"]
z_index = -99
scale = Vector2(4.5, 4.5)
texture = ExtResource("5_benjv")
centered = false

[node name="Fg1" type="Sprite2D" parent="CanvasLayer"]
z_index = -97
scale = Vector2(4.5, 4.5)
texture = ExtResource("6_y3x05")
centered = false

[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CanvasLayer/PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
